--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -9,32 +9,38 @@
         font-family 'Source Code Pro', monospace
 
     .header
-        background url('https://images.unsplash.com/photo-1451337516015-6b6e9a44a8a3?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925')
-        background-position center
+        height 325px
 
     .page-title
         font-weight 200
         font-size 80px
         text-align center
-        padding 100px
+        padding-top 175px
         text-transform uppercase
-        color #fff
+        color #ff4d4d
 
     .nav
-        background #000
+        background #ff4d4d
+        height 90px
+        text-align center
+
+    .subtitle
         text-align center
 
     li
         display inline-block
 
     a
+        margin-top 10px
         display inline-block
-        padding 20px
-        color #fff
+        padding 25px
+        //background url(http://content.sportslogos.net/logos/34/854/full/4803_stanford_cardinal-primary-2014.pn://media.glassdoor.com/sqll/2989/stanford-university-squarelogo-1431968559974.png)
+        //background-position center
+        background-color #fff
         text decoration none
 
         &:hover
-            background-color #3AB795
+            background-color #ff4d4d
             text-decoration underline
 
      .main-content
