--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -6,16 +6,11 @@ html
     body
         .header
             h1.page-title Jason Zheng
-
+            .subtitle Stanford University &middot; BS Computer Science 2020
         ul.nav
             li: a(href='/') Home
             li: a(href='#news') News
-            li: a(href='#about') About
+            li: a(href='#about') About Me
             li: a(href='#contact') Contact
-
         .main-content
             block content
-
-        .footer
-            p Jason Zheng's Website
-
