--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,32 +8,36 @@
   font-family: 'Source Code Pro', monospace;
 }
 * .header {
-  background: url("https://images.unsplash.com/photo-1451337516015-6b6e9a44a8a3?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925");
-  background-position: center;
+  height: 325px;
 }
 * .page-title {
   font-weight: 200;
   font-size: 80px;
   text-align: center;
-  padding: 100px;
+  padding-top: 175px;
   text-transform: uppercase;
-  color: #fff;
+  color: #ff4d4d;
 }
 * .nav {
-  background: #000;
+  background: #ff4d4d;
+  height: 90px;
+  text-align: center;
+}
+* .subtitle {
   text-align: center;
 }
 * li {
   display: inline-block;
 }
 * a {
+  margin-top: 10px;
   display: inline-block;
-  padding: 20px;
-  color: #fff;
+  padding: 25px;
+  background-color: #fff;
   text: decoration none;
 }
 * a:hover {
-  background-color: #3ab795;
+  background-color: #ff4d4d;
   text-decoration: underline;
 }
 * .main-content {
