--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -21,7 +21,7 @@
 
     .nav
         background #ff4d4d
-        height 90px
+        height 80px
         text-align center
 
     .subtitle
@@ -31,7 +31,7 @@
         display inline-block
 
     a
-        margin-top 10px
+        margin 5px 2.5px 5px 2.5px
         display inline-block
         padding 25px
         //background url(http://content.sportslogos.net/logos/34/854/full/4803_stanford_cardinal-primary-2014.pn://media.glassdoor.com/sqll/2989/stanford-university-squarelogo-1431968559974.png)
