--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -9,8 +9,8 @@ html
             .subtitle Stanford University &middot; BS Computer Science 2020
         ul.nav
             li: a(href='/') Home
-            li: a(href='#news') News
-            li: a(href='#about') About Me
+            li: a(href='#news') Goals
+            li: a(href='#about') Resume
             li: a(href='#contact') Contact
         .main-content
             block content
