--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,7 +20,7 @@
 }
 * .nav {
   background: #ff4d4d;
-  height: 80px;
+  height: 125px;
   text-align: center;
 }
 * .subtitle {
@@ -30,15 +30,18 @@
   display: inline-block;
 }
 * a {
+  color: #ff4d4d;
   margin: 5px 2.5px 5px 2.5px;
+  padding-top: 45px;
   display: inline-block;
-  padding: 25px;
+  height: 115px;
+  width: 115px;
   background-color: #fff;
-  text: decoration none;
+  text-decoration: none;
 }
 * a:hover {
   background-color: #ff4d4d;
-  text-decoration: underline;
+  color: #fff;
 }
 * .main-content {
   margin: 50px auto;
