--- a/source/templates/homepage.jade
+++ b/source/templates/homepage.jade
@@ -1,4 +1,4 @@
 extend default
 
 block content
-    p. 
+    p. I'm currently a Freshman studying at Stanford University, where I am pursuing my Bachelors of Sciences in Computer Science (expected 2020). I am deeply interested in technology's potential for spreading empathy and education. My goal at Stanford is to learn about how I can apply Virtual Reality and Neural Networks to create new ways for people to share stories and experiences. 
