--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -50,6 +50,7 @@
      .main-content
         margin 50px auto
         max-width 600px
+        color #000
 
         p
             line-height 1.6
