added pictures to buttons

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -29,18 +29,17 @@
 
     li
         display inline-block
+        background url('https://images.unsplash.com/photo-1451337516015-6b6e9a44a8a3?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925')
+        background-position center
+        margin 5px 2.5px 5px 2.5px
+
 
     a
-        color #ff4d4d
-        margin 5px 2.5px 5px 2.5px
+        color #fff
         padding-top 45px
         display inline-block
         height 115 px;
         width 115 px;
-        //make it so text doesn't appear or something unless you hover over
-        //background url(http://content.sportslogos.net/logos/34/854/full/4803_stanford_cardinal-primary-2014.pn://media.glassdoor.com/sqll/2989/stanford-university-squarelogo-1431968559974.png)
-        //background-position center
-        background-color #fff
         text-decoration none
 
         &:hover
