--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,15 +28,16 @@
 }
 * li {
   display: inline-block;
+  background: url("https://images.unsplash.com/photo-1451337516015-6b6e9a44a8a3?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925");
+  background-position: center;
+  margin: 5px 2.5px 5px 2.5px;
 }
 * a {
-  color: #ff4d4d;
-  margin: 5px 2.5px 5px 2.5px;
+  color: #fff;
   padding-top: 45px;
   display: inline-block;
   height: 115px;
   width: 115px;
-  background-color: #fff;
   text-decoration: none;
 }
 * a:hover {
