--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -8,16 +8,17 @@ html
             h1.page-title Jason Zheng
             .subtitle Stanford University &middot; BS Computer Science 2020
         ul.nav
-            li: a(href='/') Home
-            li: a(href='#where') Where
-            li: a(href='#hs') High School
-            li: a(href='#zd') Zen Ducky
-            li: a(href='#th') TreeHacks
+            li: a(href'/') &nbsp
+            li: a(href='#me') Me
+            li: a(href='#zd') Projects
+            li: a(href='#th') Groups
             li: a(href='#coursework') Coursework
             li: a(href='#exp') Experience
             li: a(href='#news') Goals
             li: a(href='#about') Resume
             li: a(href='#github') Github
-            li: a(href='#contact') Contact
+            li: a(href='#linkedin') Linkedin
+            li#23: a(href='#contact') Contact
         .main-content
             block content
+
