--- a/static/css/index.css
+++ b/static/css/index.css
@@ -16,10 +16,10 @@
   text-align: center;
   padding-top: 175px;
   text-transform: uppercase;
-  color: #ff4d4d;
+  color: #06c;
 }
 * .nav {
-  background: #ff4d4d;
+  background: #1ac6ff;
   height: 125px;
   text-align: center;
 }
@@ -28,20 +28,112 @@
 }
 * li {
   display: inline-block;
-  background: url("https://images.unsplash.com/photo-1451337516015-6b6e9a44a8a3?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925");
-  background-position: center;
   margin: 5px 2.5px 5px 2.5px;
+  background: url("http://imgur.com/BEQL2ri.png");
+  background-position: center;
+}
+* #1 {
+  background: url("http://imgur.com/BEQL2ri.png");
+  background-position: center;
+}
+* #2 {
+  background: url("http://imgur.com/moOhtUg.png");
+  background-position: center;
+}
+* #3 {
+  background: url("http://imgur.com/qGilaMI.png");
+  background-position: center;
+}
+* #4 {
+  background: url("http://imgur.com/iIT940P.png");
+  background-position: center;
+}
+* #5 {
+  background: url("http://imgur.com/dwfVYGO.png");
+  background-position: center;
+}
+* #6 {
+  background: url("http://imgur.com/8qD8gRR.png");
+  background-position: center;
+}
+* #7 {
+  background: url("http://imgur.com/HSrzRVt.png");
+  background-position: center;
+}
+* #8 {
+  background: url("http://imgur.com/FGI6Eqy.png");
+  background-position: center;
+}
+* #9 {
+  background: url("http://imgur.com/Q2ArKMW.png");
+  background-position: center;
+}
+* #10 {
+  background: url("http://imgur.com/sWP44fN.png");
+  background-position: center;
+}
+* #11 {
+  background: url("http://imgur.com/MoV9zHN.png");
+  background-position: center;
+}
+* #12 {
+  background: url("http://imgur.com/N2FTILd.png");
+  background-position: center;
+}
+* #13 {
+  background: url("http://imgur.com/RYhSyHy.png");
+  background-position: center;
+}
+* #14 {
+  background: url("http://imgur.com/jgK5P9B.png");
+  background-position: center;
+}
+* #15 {
+  background: url("http://imgur.com/HbRwLp7.png");
+  background-position: center;
+}
+* #16 {
+  background: url("http://imgur.com/8Gh68RI.png");
+  background-position: center;
+}
+* #17 {
+  background: url("http://imgur.com/ppJmtxu.png");
+  background-position: center;
+}
+* #18 {
+  background: url("http://imgur.com/TvnEFhX.png");
+  background-position: center;
+}
+* #19 {
+  background: url("http://imgur.com/jttoKt3.png");
+  background-position: center;
+}
+* #20 {
+  background: url("http://imgur.com/xTVfKtn.png");
+  background-position: center;
+}
+* #21 {
+  background: url("http://imgur.com/w8TsBKN.png");
+  background-position: center;
+}
+* #22 {
+  background: url("http://imgur.com/Tg4eudz.png");
+  background-position: center;
+}
+* li#23 {
+  background: url("http://imgur.com/xRHCEbA.png");
+  background-position: center;
 }
 * a {
   color: #fff;
-  padding-top: 45px;
+  padding-top: 10px;
   display: inline-block;
   height: 115px;
   width: 115px;
   text-decoration: none;
 }
 * a:hover {
-  background-color: #ff4d4d;
+  background-color: #1ac6ff;
   color: #fff;
 }
 * .main-content {
