think i'm going to ditch the pictures

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -27,102 +27,141 @@
     .subtitle
         text-align center
 
-    li
+    .li1
         display inline-block
         margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/BEQL2ri.png')
         background-position center
- 
 
-    #1
-        background url('http://imgur.com/BEQL2ri.png')
-        background-position center
-
-    #2
+    .li2
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/moOhtUg.png')
         background-position center
 
-    #3
+    .li3
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/qGilaMI.png')
         background-position center
 
-    #4
+    .li4
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/iIT940P.png')
         background-position center
 
-    #5
+    .li5
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/dwfVYGO.png')
         background-position center
 
-    #6
+    .li6
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/8qD8gRR.png')
         background-position center
 
-    #7
+    .li7
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/HSrzRVt.png')
         background-position center
 
-    #8
+    .li8
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/FGI6Eqy.png')
         background-position center
 
-    #9
+    .li9
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/Q2ArKMW.png')
         background-position center
 
-    #10
+    .li10
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/sWP44fN.png')
         background-position center
 
-    #11
+    .li11
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/MoV9zHN.png')
         background-position center
 
-    #12
+    .li12
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/N2FTILd.png')
         background-position center
 
-    #13
+    .li13
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/RYhSyHy.png')
         background-position center
 
-    #14
+    .li14
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/jgK5P9B.png')
         background-position center
 
-    #15
+    .li15
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/HbRwLp7.png')
         background-position center
 
-    #16
+    .li16
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/8Gh68RI.png')
         background-position center
 
-    #17
+    .li17
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/ppJmtxu.png')
         background-position center
 
-    #18
+    .li18
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/TvnEFhX.png')
         background-position center
 
-    #19
+    .li19
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/jttoKt3.png')
         background-position center
 
-    #20
+    .li20
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/xTVfKtn.png')
         background-position center
     
-    #21
+    .li21
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/w8TsBKN.png')
         background-position center
  
-    #22
+    .li22
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/Tg4eudz.png')
         background-position center
 
-    li#23    
+    .li23   
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
         background url('http://imgur.com/xRHCEbA.png')
         background-position center
         
