--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -8,17 +8,17 @@ html
             h1.page-title Jason Zheng
             .subtitle Stanford University &middot; BS Computer Science 2020
         ul.nav
-            li: a(href'/') &nbsp
-            li: a(href='#me') Me
-            li: a(href='#zd') Projects
-            li: a(href='#th') Groups
-            li: a(href='#coursework') Coursework
-            li: a(href='#exp') Experience
-            li: a(href='#news') Goals
-            li: a(href='#about') Resume
-            li: a(href='#github') Github
-            li: a(href='#linkedin') Linkedin
-            li#23: a(href='#contact') Contact
+            .li13: a(href'/') &nbsp
+            .li14: a(href='#me') Me
+            .li15: a(href='#zd') Projects
+            .li16: a(href='#th') Groups
+            .li17: a(href='#coursework') Coursework
+            .li18: a(href='#exp') Experience
+            .li19: a(href='#news') Goals
+            .li20: a(href='#about') Resume
+            .li21: a(href='#github') Github
+            .li22: a(href='#linkedin') Linkedin
+            .li23: a(href='#contact') Contact
         .main-content
             block content
 
