got rid of the pictures

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -10,6 +10,8 @@
 
     .header
         height 325px
+        background url('http://imgur.com/BEQL2ri.png')
+        background-position center
 
     .page-title
         font-weight 200
@@ -27,11 +29,12 @@
     .subtitle
         text-align center
 
-    .li1
+    li
         display inline-block
         margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/BEQL2ri.png')
-        background-position center
+        background-color white
+        //background url('http://imgur.com/BEQL2ri.png')
+        //background-position center
 
     .li2
         display inline-block
@@ -166,8 +169,8 @@
         background-position center
         
     a
-        color #fff
-        padding-top 10px
+        color #1ac6ff
+        padding-top 45px
         display inline-block
         height 115 px;
         width 115 px;
