--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,6 +9,8 @@
 }
 * .header {
   height: 325px;
+  background: url("http://imgur.com/BEQL2ri.png");
+  background-position: center;
 }
 * .page-title {
   font-weight: 200;
@@ -26,11 +28,10 @@
 * .subtitle {
   text-align: center;
 }
-* .li1 {
+* li {
   display: inline-block;
   margin: 5px 2.5px 5px 2.5px;
-  background: url("http://imgur.com/BEQL2ri.png");
-  background-position: center;
+  background-color: #fff;
 }
 * .li2 {
   display: inline-block;
@@ -165,8 +166,8 @@
   background-position: center;
 }
 * a {
-  color: #fff;
-  padding-top: 10px;
+  color: #1ac6ff;
+  padding-top: 45px;
   display: inline-block;
   height: 115px;
   width: 115px;
