--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -10,8 +10,11 @@
 
     .header
         height 325px
-        background url('http://imgur.com/BEQL2ri.png')
-        background-position center
+        //animation: fadein 3s;
+
+     @keyframes fadein 
+         from {opacity: 0; }
+         to {opacity: 1;}
 
     .page-title
         font-weight 200
@@ -25,6 +28,15 @@
         background #1ac6ff
         height 125px
         text-align center
+        animation: expand 0.75s;
+
+    @keyframes expand
+        from {height: 0px; margin-top: 62.5px;}
+        to {height: 125px; margin-top: 0px;}
+
+    @keyframes flyin
+        from {position: relative; left 2000px; opacity: 1;}
+        to {position: relative; left 0px; opacity:1;}
 
     .subtitle
         text-align center
@@ -33,140 +45,11 @@
         display inline-block
         margin 5px 2.5px 5px 2.5px
         background-color white
-        //background url('http://imgur.com/BEQL2ri.png')
-        //background-position center
-
-    .li2
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/moOhtUg.png')
-        background-position center
-
-    .li3
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/qGilaMI.png')
-        background-position center
-
-    .li4
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/iIT940P.png')
-        background-position center
-
-    .li5
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/dwfVYGO.png')
-        background-position center
-
-    .li6
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/8qD8gRR.png')
-        background-position center
-
-    .li7
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/HSrzRVt.png')
-        background-position center
-
-    .li8
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/FGI6Eqy.png')
-        background-position center
-
-    .li9
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/Q2ArKMW.png')
-        background-position center
-
-    .li10
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/sWP44fN.png')
-        background-position center
-
-    .li11
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/MoV9zHN.png')
-        background-position center
-
-    .li12
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/N2FTILd.png')
-        background-position center
-
-    .li13
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/RYhSyHy.png')
-        background-position center
-
-    .li14
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/jgK5P9B.png')
-        background-position center
-
-    .li15
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/HbRwLp7.png')
-        background-position center
-
-    .li16
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/8Gh68RI.png')
-        background-position center
-
-    .li17
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/ppJmtxu.png')
-        background-position center
-
-    .li18
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/TvnEFhX.png')
-        background-position center
-
-    .li19
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/jttoKt3.png')
-        background-position center
-
-    .li20
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/xTVfKtn.png')
-        background-position center
-    
-    .li21
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/w8TsBKN.png')
-        background-position center
- 
-    .li22
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/Tg4eudz.png')
-        background-position center
-
-    .li23   
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background url('http://imgur.com/xRHCEbA.png')
-        background-position center
+        opacity: 0;
+        animation: flyin 1s;
+        animation-timing-function: ease-out; 
+        animation-fill-mode: forwards;
+        animation-delay: 0.5s;
         
     a
         color #1ac6ff
