fine tuned animations

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -29,6 +29,7 @@
         height 125px
         text-align center
         animation: expand 0.75s;
+        margin 0px -4000px 0px -4000px
 
     @keyframes expand
         from {height: 0px; margin-top: 62.5px;}
@@ -36,7 +37,7 @@
 
     @keyframes flyin
         from {position: relative; left 2000px; opacity: 1;}
-        to {position: relative; left 0px; opacity:1;}
+        to {position: relative; left -300px; opacity:1;}
 
     .subtitle
         text-align center
