--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -9,6 +9,12 @@ html
             .subtitle Stanford University &middot; BS Computer Science 2020
         ul.nav
             li: a(href'/') &nbsp
+            li: a(href'/') &nbsp
+            li: a(href'/') &nbsp
+            li: a(href'/') &nbsp
+            li: a(href'/') &nbsp
+            li: a(href'/') &nbsp
+            li: a(href'/') &nbsp
             li: a(href='#me') Me
             li: a(href='#zd') Projects
             li: a(href='#th') Groups
@@ -19,6 +25,8 @@ html
             li: a(href='#github') Github
             li: a(href='#linkedin') Linkedin
             li: a(href='#contact') Contact
+            li: a(href'/') &nbsp
+            li: a(href'/') &nbsp
         .main-content
             block content
 
