--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -6,7 +6,12 @@ html
     body
         .header
             h1.page-title Jason Zheng
-            .subtitle Stanford University &middot; BS Computer Science 2020
+            .subtitle About Me  &middot;  Resume  &middot; Contact Me
+         //   ul.subtitle
+               // li.sub: a(href'#me') About Me //create buttons for different slides, this page is actually going to not be landing pg
+               // li.sub: a(href'#resume') Resume
+               // li.sub: a(href'#contact') Contact Me 
+
         ul.nav
             li: a(href'/') &nbsp
             li: a(href'/') &nbsp
@@ -15,16 +20,16 @@ html
             li: a(href'/') &nbsp
             li: a(href'/') &nbsp
             li: a(href'/') &nbsp
-            li: a(href='#me') Me
-            li: a(href='#zd') Projects
-            li: a(href='#th') Groups
-            li: a(href='#coursework') Coursework
-            li: a(href='#exp') Experience
-            li: a(href='#news') Goals
-            li: a(href='#about') Resume
-            li: a(href='#github') Github
-            li: a(href='#linkedin') Linkedin
-            li: a(href='#contact') Contact
+            li: a(href='#me') &nbsp 
+            li: a(href='#zd') &nbsp
+            li: a(href='#th') About Me
+            li: a(href='#coursework') &nbsp
+            li: a(href='#exp') Resume
+            li: a(href='#news') &nbsp
+            li: a(href='#about') Contact Me
+            li: a(href='#github') &nbsp
+            li: a(href='#linkedin') &nbsp
+            li: a(href='#contact') &nbsp
             li: a(href'/') &nbsp
             li: a(href'/') &nbsp
         .main-content
