--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -10,7 +10,6 @@
 
     .header
         height 325px
-        //animation: fadein 3s;
 
      @keyframes fadein 
          from {opacity: 0; }
@@ -29,18 +28,35 @@
         height 125px
         text-align center
         animation: expand 0.75s;
+        animation-delay: 0.75s;
+        animation-fill-mode: forwards;
         margin 0px 0px  0px -4000px
+        opacity 0
 
     @keyframes expand
-        from {height: 0px; margin-top: 62.5px;}
-        to {height: 125px; margin-top: 0px;}
+        from {height: 0px; margin-top: 62.5px; opacity:1}
+        to {height: 125px; margin-top: 0px; opacity:1}
 
     @keyframes flyin
         from {position: relative; left 4500px; opacity: 1;}
         to {position: relative; left 1760px; opacity:1;}
 
     .subtitle
+        background #fff
         text-align center
+        animation: fadein 1s;
+        height 50px
+
+    lo
+        display inline-block
+        background-color white
+
+    mini
+        color #000
+        text-decoration none
+
+        &:hover
+            color #1ac6ff
 
     li
         display inline-block
@@ -50,7 +66,7 @@
         animation: flyin 1s;
         animation-timing-function: ease-out; 
         animation-fill-mode: forwards;
-        animation-delay: 0.5s;
+        animation-delay: 1.25s;
         
     a
         color #1ac6ff
