--- a/static/css/index.css
+++ b/static/css/index.css
@@ -23,10 +23,27 @@
   height: 125px;
   text-align: center;
   animation: expand 0.75s;
+  animation-delay: 0.75s;
+  animation-fill-mode: forwards;
   margin: 0px 0px 0px -4000px;
+  opacity: 0;
 }
 * .subtitle {
+  background: #fff;
   text-align: center;
+  animation: fadein 1s;
+  height: 50px;
+}
+* lo {
+  display: inline-block;
+  background-color: #fff;
+}
+* mini {
+  color: #000;
+  text-decoration: none;
+}
+* mini:hover {
+  color: #1ac6ff;
 }
 * li {
   display: inline-block;
@@ -36,7 +53,7 @@
   animation: flyin 1s;
   animation-timing-function: ease-out;
   animation-fill-mode: forwards;
-  animation-delay: 0.5s;
+  animation-delay: 1.25s;
 }
 * a {
   color: #1ac6ff;
@@ -105,40 +122,48 @@
   from {
     height: 0px;
     margin-top: 62.5px;
+    opacity: 1;
   }
   to {
     height: 125px;
     margin-top: 0px;
+    opacity: 1;
   }
 }
 @-webkit-keyframes expand {
   from {
     height: 0px;
     margin-top: 62.5px;
+    opacity: 1;
   }
   to {
     height: 125px;
     margin-top: 0px;
+    opacity: 1;
   }
 }
 @-o-keyframes expand {
   from {
     height: 0px;
     margin-top: 62.5px;
+    opacity: 1;
   }
   to {
     height: 125px;
     margin-top: 0px;
+    opacity: 1;
   }
 }
 @keyframes expand {
   from {
     height: 0px;
     margin-top: 62.5px;
+    opacity: 1;
   }
   to {
     height: 125px;
     margin-top: 0px;
+    opacity: 1;
   }
 }
 @-moz-keyframes flyin {
