--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -34,25 +34,26 @@
         opacity 0
 
     @keyframes expand
-        from {height: 0px; margin-top: 62.5px; opacity:1}
+        from {height: 0px; margin-top: 50px; opacity:1}
         to {height: 125px; margin-top: 0px; opacity:1}
 
     @keyframes flyin
         from {position: relative; left 4500px; opacity: 1;}
-        to {position: relative; left 1760px; opacity:1;}
+        to {position: relative; left 1650px; opacity:1;}
 
     .subtitle
         background #fff
         text-align center
-        animation: fadein 1s;
+        //animation: fadein 1s;
         height 50px
 
     lo
         display inline-block
         background-color white
 
-    mini
+    .mini
         color #000
+        display inline-block
         text-decoration none
 
         &:hover
@@ -68,7 +69,7 @@
         animation-fill-mode: forwards;
         animation-delay: 1.25s;
         
-    a
+    .large
         color #1ac6ff
         padding-top 45px
         display inline-block
@@ -79,6 +80,15 @@
         &:hover
             background-color #1ac6ff
             color #fff
+
+     .large-blue
+        background-color #1ac6ff
+        color #fff
+        padding-top 45px
+        display inline-block
+        height 115px
+        width 115px
+        text-decoration none
 
      .main-content
         margin 50px auto
