--- a/source/templates/contact-open.jade
+++ b/source/templates/contact-open.jade
@@ -9,7 +9,7 @@ block nav-mini
       lo: a.mini(href = 'contact') Contact Me 
 
 block nav-menu
-    ul.nav
+    ul.nav-open
         li: a.large(href'/') &nbsp;
         li: a.large(href'/') &nbsp;
         li: a.large(href'/') &nbsp;
