--- a/source/templates/homepage.jade
+++ b/source/templates/homepage.jade
@@ -1,3 +1,10 @@
 extend default
 
-block nav-menu
+block nav-mini
+    ul.subtitle
+      lo: a.mini(href = 'about-o') About Me
+      lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
+      lo: a.mini(href = 'resume-o') Resume
+      lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
+      lo: a.mini(href = 'contact-o') Contact Me 
+
