--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -33,6 +33,12 @@
         margin 0px 0px  0px -4000px
         opacity 0
 
+    .nav-open
+        background #1ac6ff
+        height 125px
+        text-align center
+        margin 0px 0px 0px -4000px
+
     @keyframes expand
         from {height: 0px; margin-top: 50px; opacity:1}
         to {height: 125px; margin-top: 0px; opacity:1}
