--- a/source/templates/about-open.jade
+++ b/source/templates/about-open.jade
@@ -9,25 +9,23 @@ block nav-mini
       lo: a.mini(href = 'contact') Contact Me 
 
 block nav-menu
-    ul.nav
+    ul.nav-open
         li: a.large(href'/') &nbsp;
         li: a.large(href'/') &nbsp;
         li: a.large(href'/') &nbsp;
         li: a.large(href'/') &nbsp;
         li: a.large(href'/') &nbsp;
         li: a.large(href'/') &nbsp;
-        li: a.large-blue(href'about') Contact Me
+        li: a.large-blue(href'/') About Me
         li: a.large(href='/') &nbsp;
         li: a.large(href='#zd') &nbsp; 
         li: a.large(href='#th') &nbsp;
         li: a.large(href='#coursework') &nbsp; 
-        li: a.large(href='#exp') Address
-        li: a.large(href='#news') Linkedin
-        li: a.large(href='#about') Facebook
-        li: a.large(href='#github') Github
-        li: a.large(href='#linkedin') Phone
-        li: a.large(href='#contact') Email
-        //li: a.large-blue(href'/') &nbsp;
-        //li: a.large-blue(href'/') &nbsp;
+        li: a.large(href='#exp') &nbsp;
+        li: a.large(href='#news') &nbsp;
+        li: a.large(href='#about') &nbsp;
+        li: a.large(href='#github') My Story
+        li: a.large(href='#linkedin') My Goals
+        li: a.large(href='#contact') My Skills
 
 
