--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -6,13 +6,7 @@ html
     body
         .header
             h1.page-title Jason Zheng
-            ul.subtitle
-                lo: a.mini(href = 'about') About Me
-                lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-                lo: a.mini(href = 'resume') Resume
-                lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-                lo: a.mini(href = 'contact') Contact Me 
-
+            block nav-mini
         block nav-menu
         .main-content
             block content
