to replace different webpages with jquery animations

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -65,6 +65,11 @@
         &:hover
             color #1ac6ff
 
+    .mini-blue
+        color #1ac6ff
+        display inline-block
+        text-decoration none
+
     li
         display inline-block
         margin 5px 2.5px 5px 2.5px
@@ -73,7 +78,18 @@
         animation: flyin 1s;
         animation-timing-function: ease-out; 
         animation-fill-mode: forwards;
+        animation-delay: 0.625s;
+
+    li-primary
+        display inline-block
+        margin 5px 2.5px 5px 2.5px
+        background-color white
+        opacity: 0;
+        animation: flyin 1s;
+        animation-timing-function: ease-out; 
+        animation-fill-mode: forwards;
         animation-delay: 1.25s;
+
         
     .large
         color #1ac6ff
