--- a/source/templates/about-open.jade
+++ b/source/templates/about-open.jade
@@ -2,7 +2,7 @@ extend default
 
 block nav-mini
     ul.subtitle
-      lo: a.mini(href = 'about') About Me
+      lo: a.mini-blue(href = '#') About Me
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
       lo: a.mini(href = 'resume') Resume
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
@@ -24,8 +24,8 @@ block nav-menu
         li: a.large(href='#exp') &nbsp;
         li: a.large(href='#news') &nbsp;
         li: a.large(href='#about') &nbsp;
-        li: a.large(href='#github') My Story
-        li: a.large(href='#linkedin') My Goals
-        li: a.large(href='#contact') My Skills
+        li: a.large(href='#github') &nbsp;
+        li: a.large(href='#linkedin') My Story
+        li: a.large(href='#contact') My Goals
 
 
