--- a/source/templates/about.jade
+++ b/source/templates/about.jade
@@ -2,7 +2,7 @@ extend default
 
 block nav-mini
     ul.subtitle
-      lo: a.mini(href = 'about') About Me
+      lo: a.mini-blue(href = '#') About Me
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
       lo: a.mini(href = 'resume') Resume
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
@@ -10,22 +10,22 @@ block nav-mini
 
 block nav-menu
     ul.nav
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large-blue(href'/') About Me
-        li: a.large(href='/') &nbsp;
-        li: a.large(href='#zd') &nbsp; 
-        li: a.large(href='#th') &nbsp;
-        li: a.large(href='#coursework') &nbsp; 
-        li: a.large(href='#exp') &nbsp;
-        li: a.large(href='#news') &nbsp;
-        li: a.large(href='#about') &nbsp;
-        li: a.large(href='#github') My Story
-        li: a.large(href='#linkedin') My Goals
-        li: a.large(href='#contact') My Skills
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large-blue(href'/') About Me
+        li-primary: a.large(href='/') &nbsp;
+        li-primary: a.large(href='#zd') &nbsp; 
+        li-primary: a.large(href='#th') &nbsp;
+        li-primary: a.large(href='#coursework') &nbsp; 
+        li-primary: a.large(href='#exp') &nbsp;
+        li-primary: a.large(href='#news') &nbsp;
+        li-primary: a.large(href='#about') &nbsp;
+        li-primary: a.large(href='#github') &nbsp;
+        li-primary: a.large(href='#linkedin') My Story
+        li-primary: a.large(href='#contact') My Goals
 
 
