--- a/source/templates/contact-open.jade
+++ b/source/templates/contact-open.jade
@@ -6,7 +6,7 @@ block nav-mini
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
       lo: a.mini(href = 'resume') Resume
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-      lo: a.mini(href = 'contact') Contact Me 
+      lo: a.mini-blue(href = '#') Contact Me 
 
 block nav-menu
     ul.nav-open
