--- a/source/templates/contact.jade
+++ b/source/templates/contact.jade
@@ -6,28 +6,26 @@ block nav-mini
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
       lo: a.mini(href = 'resume') Resume
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-      lo: a.mini(href = 'contact') Contact Me 
+      lo: a.mini-blue(href = '#') Contact Me 
 
 block nav-menu
     ul.nav
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large-blue(href'about') Contact Me
-        li: a.large(href='/') &nbsp;
-        li: a.large(href='#zd') &nbsp; 
-        li: a.large(href='#th') &nbsp;
-        li: a.large(href='#coursework') &nbsp; 
-        li: a.large(href='#exp') Address
-        li: a.large(href='#news') Linkedin
-        li: a.large(href='#about') Facebook
-        li: a.large(href='#github') Github
-        li: a.large(href='#linkedin') Phone
-        li: a.large(href='#contact') Email
-        //li: a.large-blue(href'/') &nbsp;
-        //li: a.large-blue(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large-blue(href'about') Contact Me
+        li-primary: a.large(href='/') &nbsp;
+        li-pimrary: a.large(href='#zd') &nbsp; 
+        li-primary: a.large(href='#th') &nbsp;
+        li-primary: a.large(href='#coursework') &nbsp; 
+        li-primary: a.large(href='#exp') Address
+        li-primary: a.large(href='#news') Linkedin
+        li-primary: a.large(href='#about') Facebook
+        li-primary: a.large(href='#github') Github
+        li-primary: a.large(href='#linkedin') Phone
+        li-primary: a.large(href='#contact') Email
 
 
