--- a/source/templates/resume-open.jade
+++ b/source/templates/resume-open.jade
@@ -4,7 +4,7 @@ block nav-mini
     ul.subtitle
       lo: a.mini(href = 'about') About Me
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-      lo: a.mini(href = 'resume') Resume
+      lo: a.mini-blue(href = '#') Resume
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
       lo: a.mini(href = 'contact') Contact Me 
 
