--- a/source/templates/resume.jade
+++ b/source/templates/resume.jade
@@ -4,28 +4,28 @@ block nav-mini
     ul.subtitle
       lo: a.mini(href = 'about') About Me
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-      lo: a.mini(href = 'resume') Resume
+      lo: a.mini-blue(href = '#') Resume
       lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
       lo: a.mini(href = 'contact') Contact Me 
 
 block nav-menu
     ul.nav
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large(href'/') &nbsp;
-        li: a.large-blue(href'/') Resume
-        li: a.large(href='/') &nbsp;
-        li: a.large(href='#zd') &nbsp; 
-        li: a.large(href='#th') &nbsp;
-        li: a.large(href='#coursework') &nbsp; 
-        li: a.large(href='#exp') Skills
-        li: a.large(href='#news') Classes
-        li: a.large(href='#about') Projects
-        li: a.large(href='#github') Groups
-        li: a.large(href='#linkedin') Education
-        li: a.large(href='#download') &#xe025;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large(href'/') &nbsp;
+        li-primary: a.large-blue(href'/') Resume
+        li-primary: a.large(href='/') &nbsp;
+        li-primary: a.large(href='#zd') &nbsp; 
+        li-primary: a.large(href='#th') &nbsp;
+        li-primary: a.large(href='#coursework') &nbsp; 
+        li-primary: a.large(href='#exp') Skills
+        li-primary: a.large(href='#news') Classes
+        li-primary: a.large(href='#about') Projects
+        li-primary: a.large(href='#github') Groups
+        li-primary: a.large(href='#linkedin') Education
+        li-primary: a.large(href='#download') &#xe025;
 
 
