--- a/static/css/index.css
+++ b/static/css/index.css
@@ -51,7 +51,22 @@
 * .mini:hover {
   color: #1ac6ff;
 }
+* .mini-blue {
+  color: #1ac6ff;
+  display: inline-block;
+  text-decoration: none;
+}
 * li {
+  display: inline-block;
+  margin: 5px 2.5px 5px 2.5px;
+  background-color: #fff;
+  opacity: 0;
+  animation: flyin 1s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+  animation-delay: 0.625s;
+}
+* li-primary {
   display: inline-block;
   margin: 5px 2.5px 5px 2.5px;
   background-color: #fff;
