moving from css animations to jquery

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -25,19 +25,9 @@
 
     .nav
         background #1ac6ff
-        height 125px
+        height 0px
         text-align center
-        animation: expand 0.75s;
-        animation-delay: 0.75s;
-        animation-fill-mode: forwards;
-        margin 0px 0px  0px -4000px
-        opacity 0
-
-    .nav-open
-        background #1ac6ff
-        height 125px
-        text-align center
-        margin 0px 0px 0px -4000px
+        margin 50px 0px  0px -4000px
 
     @keyframes expand
         from {height: 0px; margin-top: 50px; opacity:1}
@@ -75,20 +65,20 @@
         margin 5px 2.5px 5px 2.5px
         background-color white
         opacity: 0;
-        animation: flyin 1s;
-        animation-timing-function: ease-out; 
-        animation-fill-mode: forwards;
-        animation-delay: 0.625s;
+        //animation: flyin 1s;
+        //animation-timing-function: ease-out; 
+        //animation-fill-mode: forwards;
+        //animation-delay: 0.625s;
 
-    li-primary
-        display inline-block
-        margin 5px 2.5px 5px 2.5px
-        background-color white
-        opacity: 0;
-        animation: flyin 1s;
-        animation-timing-function: ease-out; 
-        animation-fill-mode: forwards;
-        animation-delay: 1.25s;
+    //li-primary
+       // display inline-block
+       // margin 5px 2.5px 5px 2.5px
+       // background-color white
+       // opacity: 0;
+       // animation: flyin 1s;
+       // animation-timing-function: ease-out; 
+       // animation-fill-mode: forwards;
+       // animation-delay: 1.25s;
 
         
     .large
