--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -14,22 +14,22 @@ html
                 lo: a.mini(href = '#') Contact Me
         ul.nav
             li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
             li: a.large-blue(href'/') About Me
+            li: a(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
             li: a.large(href='/') &nbsp;
             li: a.large(href='#zd') &nbsp; 
             li: a.large(href='#th') &nbsp;
-            li: a.large(href='#coursework') &nbsp; 
-            li: a.large(href='#exp') &nbsp;
+            li: a.large(href='#coursework') My Story 
+            li: a.large(href='#exp') My Goals
             li: a.large(href='#news') &nbsp;
             li: a.large(href='#about') &nbsp;
             li: a.large(href='#github') &nbsp;
-            li: a.large(href='#linkedin') My Story
-            li: a.large(href='#contact') My Goals
+            li: a.large-blue(href='#linkedin') Resume
+            li: a.large(href='#contact') &nbsp;
 
         .main-content
             block content
