--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -25,13 +25,9 @@
 
     .nav
         background #1ac6ff
-        height 0px
+        height 125px
         text-align center
         margin 50px 0px  0px -4000px
-
-    @keyframes expand
-        from {height: 0px; margin-top: 50px; opacity:1}
-        to {height: 125px; margin-top: 0px; opacity:1}
 
     @keyframes flyin
         from {position: relative; left 4500px; opacity: 1;}
@@ -65,10 +61,10 @@
         margin 5px 2.5px 5px 2.5px
         background-color white
         opacity: 0;
-        //animation: flyin 1s;
-        //animation-timing-function: ease-out; 
-        //animation-fill-mode: forwards;
-        //animation-delay: 0.625s;
+        animation: flyin 1s;
+        animation-timing-function: ease-out; 
+        animation-fill-mode: forwards;
+        animation-delay: 0.625s;
 
     //li-primary
        // display inline-block
@@ -80,7 +76,6 @@
        // animation-fill-mode: forwards;
        // animation-delay: 1.25s;
 
-        
     .large
         color #1ac6ff
         padding-top 45px
