--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,7 +20,7 @@
 }
 * .nav {
   background: #1ac6ff;
-  height: 0px;
+  height: 125px;
   text-align: center;
   margin: 50px 0px 0px -4000px;
 }
@@ -51,6 +51,10 @@
   margin: 5px 2.5px 5px 2.5px;
   background-color: #fff;
   opacity: 0;
+  animation: flyin 1s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+  animation-delay: 0.625s;
 }
 @-moz-keyframes fadein {
   from {
@@ -81,54 +85,6 @@
     opacity: 0;
   }
   to {
-    opacity: 1;
-  }
-}
-@-moz-keyframes expand {
-  from {
-    height: 0px;
-    margin-top: 50px;
-    opacity: 1;
-  }
-  to {
-    height: 125px;
-    margin-top: 0px;
-    opacity: 1;
-  }
-}
-@-webkit-keyframes expand {
-  from {
-    height: 0px;
-    margin-top: 50px;
-    opacity: 1;
-  }
-  to {
-    height: 125px;
-    margin-top: 0px;
-    opacity: 1;
-  }
-}
-@-o-keyframes expand {
-  from {
-    height: 0px;
-    margin-top: 50px;
-    opacity: 1;
-  }
-  to {
-    height: 125px;
-    margin-top: 0px;
-    opacity: 1;
-  }
-}
-@keyframes expand {
-  from {
-    height: 0px;
-    margin-top: 50px;
-    opacity: 1;
-  }
-  to {
-    height: 125px;
-    margin-top: 0px;
     opacity: 1;
   }
 }
